# Extensionvshook

./: .gitignore  APP ATIVO.lua  Compilar_DLL.bat  LEIA_AJUSTES_APP_DIRETOR_FILA_REPERTORIO.txt  LEIA_AJUSTES_AUTOSTOP_LOOP_DIRETOR.txt  LEIA_APP_ATIVO_RETOMAR.txt  LEIA_COMPILAR_DLL.txt  LEIA_EXCLUSIVIDADE_BETA_ESTAVEL.txt  LEIA_FIX_FILA_LUA.txt  LEIA_LOOP_IGUAL_AO_LUA_APP_DIRETOR.txt  LEIA_PREMIX_APP_DIRETOR_ITENS.txt  LEIA_PREMIX_FAMILIA_PAI_FILHOS.txt  LEIA_PREMIX_NATIVO.txt  LEIA_PREMIX_REGIAO_PAI_MARKERS.txt  LEIA_REPERTORIO_SINCRONIZADO.txt  LEIA_SENHA_DIRETOR_ATUALIZADA.txt  LEIA_SINCRONIZACAO_APP_LUA.txt  LEIA_SINCRONIZACAO_AUTOSTOP_FILA_MANUAL.txt  LEIA_TELEPROMPT_APP_DIRETOR_REDE.txt  LEIA_TEMPO_TOTAL_IGUAL_AO_LUA.txt  LEIA_TIMER_REGRESSIVO_NEGATIVO.txt  LEIA_TIMER_SYNC_ATALHOS_FOCO.txt  LEIA_TUNER_NATIVO.txt  README.txt  integracao_anotacoes_no_lua.txt  subir extensão.bat
.github/workflows/: build-vshook-loader.yml
VS Hook APP/: APP ATIVO.lua  VS Hook Anotacoes.lua
docs/: README_PTBR.md
extension/: CMakeLists.txt
extension/build-fix9/: CMakeCache.txt  Makefile  cmake_install.cmake
extension/build-linux-test/: CMakeCache.txt  Makefile  cmake_install.cmake
extension/sdk/: reaper_plugin_functions.h
extension/src/: vshook_extension.cpp
